--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,45 +1,31 @@
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read  # Allow access to repository contents
-      security-events: write  # Allow updates to the dependency graph
-
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
-        distribution: 'temurin'
 
     - name: Cache Maven dependencies
       uses: actions/cache@v3
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+        restore-keys: ${{ runner.os }}-maven-
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Save state
-      run: echo "name=value" >> $GITHUB_STATE
-
-    - name: Set output
-      run: echo "name=value" >> $GITHUB_OUTPUT
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
+    - name: Submit Maven dependencies
       uses: advanced-security/maven-dependency-submission-action@v1.1.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT }}
