--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,22 +10,16 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-
-    - name: Cache Maven dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-maven-
-
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Submit Maven dependencies
-      uses: advanced-security/maven-dependency-submission-action@v1.1.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}
+- name: Set up JDK 17
+  uses: actions/setup-java@v4
+  with:
+    java-version: '17'
+    distribution: 'temurin'  # This is required!
+    java-package: jdk
+    check-latest: false
+    server-id: github
+    server-username: GITHUB_ACTOR
+    server-password: GITHUB_TOKEN
+    overwrite-settings: true
+    job-status: success
+    token: ${{ secrets.GITHUB_TOKEN }}
